<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_home_bg"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/btn_forgot_password"
            android:layout_width="0dp"
            android:layout_height="56dp" android:id="@+id/btn_forgot_password"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/phoneAuthButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:background="@null" android:textColor="@color/colorAccent"/>
        <Button
            android:text="Phone Auth"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="56dp" android:id="@+id/phoneAuthButton"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/registerButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:background="@color/colorAccent"/>
        <Button

            android:text="@string/register"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:id="@+id/registerButton"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="@+id/loginButton"/>

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:text="bijesh.jayaprakash@gmail.com"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="0dp"
            android:text="Password"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailInput" android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/log_in_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordInput"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
